--- a/family-tree/src/app/app.component.scss
+++ b/family-tree/src/app/app.component.scss
@@ -1,5 +1,7 @@
 .app-root {
+  background-image: linear-gradient(to top right,#F9BD72 , #FBF8EF);
   .banner-header{
     background: aqua;
   }
+
 }
