--- a/family-tree/src/app/module/header/header.component.html
+++ b/family-tree/src/app/module/header/header.component.html
@@ -6,40 +6,40 @@
     <ul class="flex justify-evenly">
       <li class="mr-[60px]">
         <div class="flex flex-col">
-          <a [routerLink]="['home']" class="text-3xl text-[#A02D27] font-[400] hover:text-3xl">Trang chủ</a>
-          <div *ngIf="navService.currentPage === pageEnum.home"  class=" bg-red pt-[5px]">
+          <a [routerLink]="['home']" class="text-4xl text-[#A02D27] font-[500] hover:text-4xl">Trang chủ</a>
+          <div *ngIf="navService.currentPage === pageEnum.home" class="pt-[5px]">
             <img src="assets/images/underlined.png" width="65px" height="14px" alt="">
           </div>
         </div>
       </li>
       <li class="mr-[60px]">
         <div class="flex flex-col">
-          <a [routerLink]="['about']" class="text-3xl text-[#A02D27] hover:text-3xl" >Giới thiệu</a>
-          <div *ngIf="navService.currentPage === pageEnum.about"  class=" bg-red pt-[5px]">
+          <a [routerLink]="['about']" class="text-4xl text-[#A02D27] hover:text-4xl">Giới thiệu</a>
+          <div *ngIf="navService.currentPage === pageEnum.about" class="pt-[5px]">
             <img src="assets/images/underlined.png" width="61px" height="14px" alt="">
           </div>
         </div>
       </li>
       <li class="mr-[60px]">
         <div class="flex flex-col">
-          <a [routerLink]="['familyTree']" class="text-3xl text-[#A02D27] hover:text-3xl">Gia phả</a>
-          <div *ngIf="navService.currentPage === pageEnum.familyTree"  class=" bg-red pt-[5px]">
+          <a [routerLink]="['familyTree']" class="text-4xl text-[#A02D27] hover:text-4xl">Gia phả</a>
+          <div *ngIf="navService.currentPage === pageEnum.familyTree" class="pt-[5px]">
             <img src="assets/images/underlined.png" width="47px" height="14px" alt="">
           </div>
         </div>
       </li>
       <li class="mr-[60px]">
         <div class="flex flex-col">
-          <a [routerLink]="['news', 'all']" class="text-3xl text-[#A02D27] hover:text-3xl">Tin tức</a>
-          <div *ngIf="navService.currentPage === pageEnum.news"  class=" bg-red pt-[5px]">
+          <a [routerLink]="['news', 'all']" class="text-4xl text-[#A02D27] hover:text-4xl">Tin tức</a>
+          <div *ngIf="navService.currentPage === pageEnum.news" class="pt-[5px]">
             <img src="assets/images/underlined.png" width="48px" height="14px" alt="">
           </div>
         </div>
       </li>
       <li class="">
         <div class="flex flex-col">
-          <a [routerLink]="['contact']" class="text-3xl text-[#A02D27] hover:text-3xl">Liên hệ</a>
-          <div *ngIf="navService.currentPage === pageEnum.contact"  class=" bg-red pt-[5px]">
+          <a [routerLink]="['contact']" class="text-4xl text-[#A02D27] hover:text-4xl">Liên hệ</a>
+          <div *ngIf="navService.currentPage === pageEnum.contact" class="pt-[5px]">
             <img src="assets/images/underlined.png" width="48px" height="14px" alt="">
           </div>
         </div>
