--- a/family-tree/src/app/module/news/news.component.html
+++ b/family-tree/src/app/module/news/news.component.html
@@ -19,5 +19,7 @@
     </ul>
   </div>
 
+  <div class="random-image1" id="image1"></div>
+  <div class="random-image3" id="image3"></div>
   <category-news-component></category-news-component>
 </div>
