--- a/family-tree/src/app/module/category-news/category-news.component.html
+++ b/family-tree/src/app/module/category-news/category-news.component.html
@@ -44,10 +44,10 @@
       </div>
     </div>
   </div>
-  <div class="box-news-background basis-3/4 mx-auto mt-[38px]">
+  <div class="box-news-background basis-3/4 mr-[100px] mt-[38px]">
     <div class="article-list w-full mr-[25px] py-[25px]">
       <a *ngFor="let post of displayedPostsMain" [routerLink]="['/news-detail', post.id]" class="bg-white mx-[30px] mb-[24px] flex">
-        <img [src]="post.image" width="234px" height="167px" alt="Post Image" class="row-span-4">
+        <img [src]="post.image" width="234px" height="169px" alt="Post Image" class="row-span-4">
         <div>
           <p class="col-span-2 px-[16px] pt-[16px] font-medium text-2xl leading-7">{{ post.title }}</p>
           <p class="col-span-1 px-[16px] font-normal text-[#9D9EA3] text-xs ">{{ post.time }}</p>
